--- a/css/style.css
+++ b/css/style.css
@@ -454,5 +454,30 @@ ul {
 
 footer {
 	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
+	padding: 34px 26px 30px 26px;
 }
 
+.info-footer {
+	display: flex;
+	flex-wrap: wrap;
+	width: 330px;
+	align-items: flex-start;	
+}
+
+.info-footer a {
+	font-size: 13px;
+	line-height: 18px;
+	font-weight: 400;
+	margin-left: 30px;
+	border-bottom: 1px solid rgb(172, 194, 182);
+}
+
+.info-footer .bold {
+	font-weight: 700;
+}
+.logo {
+
+	align-self: center;
+}
