--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,7 @@ footer {
 }
 
 .modal-login {
+	display: none;
 	width: 278px;
 	min-height: 230px;
 	background-color: #f8f7f4;
@@ -538,10 +539,13 @@ box-sizing: border-box;
 }
 
 .feedback {
+	display: none;
 	position: fixed;
-	top: 5%;
-	left: 35%;
+	top: 50%;
+	left: 50%;
 	z-index: 50;
+	margin-top: -221px;
+	margin-left: -238px;
 	width: 460px;
 	background-color: #f8f7f4;
 	padding: 25px;
@@ -603,4 +607,153 @@ textarea {
     border: none;
     background: url(../img/close.png) no-repeat;
     outline: none;
+}
+
+.breadcrumbs-item {
+	font-size: 14px;
+	line-height: 16px;
+	font-weight: 400;
+	border-bottom: 1px solid rgba(178,178,178,.52); 
+}
+
+.breadcrumbs-item:last-child {
+	border: none;
+}
+
+.creamy-header h2 {
+	font-size: 35px;	
+	line-height: 41px;
+	margin: 7px 0;
+}
+
+.form-filter {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	width: 864px;
+}
+
+.sort {
+	width: 195px;
+}
+
+.form-filter span, legend {
+	font-size: 14px;
+	line-height: 16px;
+	font-weight: 400;
+	padding-left: 15px;
+}
+
+.form-filter fieldset {
+	border: none;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.fatness-list {
+	display: flex;
+}
+
+.filles-list {
+	display: flex;
+}
+
+ select {
+	height: 36px;
+    padding: 0 35px 0 15px;
+    font-size: 16px;
+    line-height: 36px;
+    color: #fff;
+    background: rgba(255,255,255,.2);
+    border: none;
+    border-radius: 18px;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.form-filter option {
+	color: #323232;
+}
+
+.fatness-list, .filles-list {
+	background-color: rgba(255,255,255,.2);
+	padding: 10px 15px;
+	font-size: 16px;
+	line-height: 18px;
+	border-radius: 18px;
+	margin: 0;
+}
+
+.range-filter {
+	background-color: rgba(255,255,255,.2);
+	border-radius: 18px;
+	width: 218px;
+	height: 36px;
+}
+.fatness-list li, .filles-list li {
+	padding-left: 56px;
+}
+
+input {
+display: none;
+}
+
+.fatness-list li:first-child, .filles-list li:first-child {
+	padding-left: 0;
+}
+
+.btn-filter {
+ background-color: rgba(255,255,255,.2);
+ color: white;
+ border: 2px solid #fff;
+ border-radius: 18px;
+ padding: 8px 27px;
+ font-size: 16px;
+ line-height: 18px;
+ margin-top: 21px;
+}
+
+.form-filter label {
+	font-weight: 500;
+}
+
+.range-controls {
+	width: 176px;
+	height: 21px;
+	margin: 0 auto;
+	padding-top:18px;
+}
+.scale {
+	position: relative;
+	width: 176px;
+	height: 4px;
+	background: rgba(255,255,255,.6);
+}
+
+.bar {
+	width: 98px;
+	height: 4px;
+	margin-left: 24px;
+	background: rgba(255,255,255,.9);
+}
+
+.toggle {
+	position: absolute;
+	width: 4px;
+	height: 4px;
+	background: #b1b1b1;
+	border: 8px solid #fff;
+	border-radius: 50%;
+}
+
+.toggle-min {
+	top: -8px;
+	right: 42px;
+}
+
+.toggle-max {
+	top: -8px;
+	left: 10px;
 }
